--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "q": "0.9.x"
     },
     "devDependencies": {
-        "grunt": "~0.4.1",
+        "grunt": "0.4.x",
         "grunt-contrib-compass": "0.6.x",
         "grunt-contrib-watch": "0.5.x",
         "grunt-jslint": "1.1.x",
