--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "async": "0.2.*",
+        "async": "0.2.x",
         "consolidate": "0.9.x",
         "express": "3.x",
         "dustjs-linkedin": "2.2.x",
